<resources>
    <string name="app_name">Notification</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_change_password">Change password</string>
    <string name="nav_signOut">Sign out</string>

    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>